2008-05-17  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* src/Backends/Rtm/RtmBackend.cs: Checking if the refresh Thread is
	  still alive and, if it isn't, create a new Thread to be used. 
	  Prevents crash when switching away from and then back to RTM
	  backend.  Fixes bug #533607, patch courtesy of Charles Schaefer.

2008-05-16  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* src/Application.cs: Rename QuitMainLoop to Quit, have it call the
	  OnQuit handler used in the StatusIcon menu.
	* src/TaskWindow.cs: Bind ctrl+q to Application.Quit.

2008-05-14  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* src/Tasque.exe.config, src/Tasque.exe.config.in, src/Makefile.am: Fix
	  `make distcheck` by adding Tasque.exe.config.in, modeled after
	  Tomboy setup.

2008-05-14  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* tasque.mdp: F5 == make run

	Patch courtesy of Eric Butler  <eric@extremeboredom.net>:

	* src/Application.cs: Use Gtk.StatusIcon instead of Egg.TrayIcon.
	* src/Backends/Rtm/RtmPreferencesWidget.cs, configure.ac: Require
	  gtk-sharp >= 2.10.
	* src/Makefile.am, src/TrayLib.cs: Remove unused file.

2008-05-12  Brian Merrell <bgmerrell@gmail.com>

	* src/PreferencesDialog.cs:  Removed some of my old, commented out
	code.
	* src/TaskWindow.cs:  Organize the status bar messages when syncing
	with a backend.  They should make more sense now.

2008-05-12  Lucas Rocha <lucasr@gnome.org>

	* po/POTFILES.in: added missing files for translation.

2008-05-09  Brian Merrell <bgmerrell@gmail.com>

	* src/NoteDialog.cs:  Added public CreateNewNote method to use when
	when creating new notes.
	* src/TaskWindow.cs:  Call CreateNewNote to put the user into "Edit
	Note" mode when they open notes w/ 0 current notes.  Also added an
	accessible description for the category selection combo box.

2008-04-15  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* src/Logger.cs: Rename log from .banter.log to .tasque.log.
